# Clara

./: CMakeLists.txt  README.md
dev/compilation/: build.bat  build.sh  xmake.lua
dev/compilation/.xmake/windows/x64/cache/: config  detect  toolchain
dev/include/Clara/: Clara.hpp
dev/include/Clara/ClaraArgs/: ArgumentParser.hpp
dev/src/Clara/ClaraArgs/: ArgumentParser.cpp  ArgumentPrinter.cpp  CommandLineArgs.cpp
dev/tests/: test_clara.cpp
doc/: installation.md
include/Clara/: ArgumentParser.hpp  ArgumentPrinter.hpp  CommandLineArgs.hpp
include/Clara/interfaces/: IArgumentParser.hpp
src/Clara/: ArgumentParser.cpp  ArgumentPrinter.cpp  CommandLineArgs.cpp
tests/: CMakeLists.txt  test_clara.cpp
